fix: navbar logos align

--- a/src/sass/Components/Navbar/navbar.scss
+++ b/src/sass/Components/Navbar/navbar.scss
@@ -77,6 +77,14 @@
                 height: 51px;
             }
 
+            .navbar-logo-2{
+                position: absolute;
+                top: 6px;
+                left: 14px;
+                z-index: 16;
+                height: 49px;
+            }
+
             .navbar-logo-open {
                 position: relative;
                 width: 100px;
